...
            android:layout_width="80dp"
            android:layout_height="match_parent"
            tools:src="@drawable/cookbook"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/step_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:padding="8dp"
            android:gravity="center"
...
