<resources>
    <string name="app_name">CookBook</string>
    <string name="failure_message">No Network!</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_short_description">Recipe steps number 1</string>
    <string name="recipe">Recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="repeat_toggle">repeat toggle</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="no_recipe_to_show">No Recipe to show!</string>
</resources>
