<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slp.cookbook.ui.RecipeStepsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

</FrameLayout>
